Continued styling adjustments on data table Removed rounded corner radius from data table, as corners of header were revealing colour underneath. Made a cells in top row of header have two lines for uniform spacing Asjusted styling or scrollbar and attempting to add cursor. Apparently a bug in webkit-scrollbar prevents alternate cursors from appearing in Chrome browser.

--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,13 @@ a:hover {
   color: #535bf2;
 }
 
+html {
+  cursor: pointer;
+}
+
 body {
   margin: 0;
+  cursor: default;
 }
 
 .iphone {
@@ -837,17 +842,18 @@ body {
 
   &::-webkit-scrollbar {
       width: 10px;
-      
+      cursor: pointer;
   }
 
   &::-webkit-scrollbar-corner,
   &::-webkit-scrollbar-track {
-      background-color: #17181a;
-      
+      background-color: rgb(64, 64, 64);
+      cursor: pointer;
   }
   
   &::-webkit-scrollbar-thumb {
       background-color: #87C75F;
+      cursor: pointer;
   }
 
   &::-webkit-scrollbar-button:single-button {
@@ -855,6 +861,7 @@ body {
       display: block;
       background-size: 8px;
       background-repeat: no-repeat;
+      cursor: pointer;
   }
 
   /* Up */
@@ -863,14 +870,17 @@ body {
   width: 16px;
   background-position: center 3px;
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(135, 199, 95)'><polygon points='50,00 0,50 100,50'/></svg>");
+  cursor: pointer;
 }
 
 &::-webkit-scrollbar-button:single-button:vertical:decrement:hover {
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(112, 112, 112)'><polygon points='50,00 0,50 100,50'/></svg>");
+  cursor: pointer;
 }
 
 &::-webkit-scrollbar-button:single-button:vertical:decrement:active {
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(128, 128, 128)'><polygon points='50,00 0,50 100,50'/></svg>");
+  cursor: pointer;
 }
 
 /* Down */
@@ -879,14 +889,17 @@ body {
   width: 16px;
   background-position: center 3px;
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(135, 199, 95)'><polygon points='0,0 100,0 50,50'/></svg>");
+  cursor: pointer;
 }
 
 &::-webkit-scrollbar-button:single-button:vertical:increment:hover {
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(112, 112, 112)'><polygon points='0,0 100,0 50,50'/></svg>");
+  cursor: pointer;
 }
 
 &::-webkit-scrollbar-button:single-button:vertical:increment:active {
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(128, 128, 128)'><polygon points='0,0 100,0 50,50'/></svg>");
+  cursor: pointer;
 }
 
 }
